--- a/swin.yml
+++ b/swin.yml
@@ -1,10 +1,12 @@
+
+
 batch_size: 24
 iters: 140
 
 train_dataset:
   type: Abdomen
-  dataset_root: abdomen/abdomen_phase0
-  result_dir: abdomen/abdomen_phase1
+  dataset_root: /kaggle/input/abdomen/abdomen_phase0
+  result_dir: /kaggle/input/abdomen/abdomen_phase1
   transforms:
     - type: RandomFlip3D
       flip_axis: [1, 2]
@@ -20,25 +22,25 @@ train_dataset:
 
 val_dataset:
   type: Abdomen
-  dataset_root: abdomen/abdomen_phase0
-  result_dir: abdomen/abdomen_phase1
+  dataset_root: /kaggle/input/abdomen/abdomen_phase0
+  result_dir: /kaggle/input/abdomen/abdomen_phase1
   num_classes: 9
   transforms:
     - type: Resize3D
       size: [1, 224, 224]
   mode: val
-  dataset_json_path: data/abdomen/abdomen_raw/dataset.json
+  dataset_json_path: /kaggle/input/abdomen/abdomen_raw/dataset.json
 
 test_dataset:
   type: Abdomen
-  dataset_root:  abdomen/abdomen_phase0
-  result_dir:  abdomen/abdomen_phase1
+  dataset_root: /kaggle/input/abdomen/abdomen_phase0
+  result_dir: /kaggle/input/abdomen/abdomen_phase1
   num_classes: 9
   transforms:
     - type: Resize3D
       size: [1, 224, 224]
   mode: val
-  dataset_json_path: data/abdomen/abdomen_raw/dataset.json
+  dataset_json_path: /kaggle/input/abdomen/abdomen_raw/dataset.json
 
 model:
   type: SwinUNet
