--- a/swin.yml
+++ b/swin.yml
@@ -10,15 +10,18 @@ train_dataset:
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
   transforms:
-    - type: RandomFlip3D
-      flip_axis: [1, 2]
-    - type: RandomQuarterTurn3D
-      rotate_planes: [[ 1, 2 ]]
-    - type: RandomRotation3D
-      degrees: 20
-      rotate_planes: [[1, 2]]
-    - type: Resize3D
-      size: [1, 224, 224]
+    - type: ResizeStepScaling # Random resize the image and label to 0.5x~2.0x
+      min_scale_factor: 0.5
+      max_scale_factor: 2.0
+      scale_step_size: 0.25
+    - type: RandomPaddingCrop # Random crop the resized image and label
+      crop_size: [128, 128]
+    - type: RandomHorizontalFlip  # Flip the image horizontally with a certain probability
+    - type: RandomDistort # Change the brightness, contrast and saturation
+      brightness_range: 0.5
+      contrast_range: 0.5
+      saturation_range: 0.5
+    - type: Normalize # Normalize the image
   mode: train
   num_classes: 2
 
@@ -27,9 +30,8 @@ val_dataset:
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
   num_classes: 2
-  transforms:
-    - type: Resize3D
-      size: [1, 224, 224]
+  transforms: # Data transformation and data augmentation
+    - type: Normalize # Normalize the image
   mode: val
 
 test_dataset:
@@ -37,9 +39,8 @@ test_dataset:
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
   num_classes: 2
-  transforms:
-    - type: Resize3D
-      size: [1, 224, 224]
+  transforms: # Data transformation and data augmentation
+    - type: Normalize # Normalize the image
   mode: val
 
 model:
