--- a/swin.yml
+++ b/swin.yml
@@ -10,12 +10,16 @@ train_dataset:
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
   mode: train
+  transforms: # Data transformation and data augmentation
+    - type: Normalize # Normalize the image
   num_classes: 2
 
 val_dataset:
   type: Abdomen
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
+  transforms: # Data transformation and data augmentation
+    - type: Normalize # Normalize the image
   num_classes: 2
   mode: val
 
@@ -23,6 +27,8 @@ test_dataset:
   type: Abdomen
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
+  transforms: # Data transformation and data augmentation
+    - type: Normalize # Normalize the image
   num_classes: 2
   mode: val
 
