--- a/swin.yml
+++ b/swin.yml
@@ -10,14 +10,16 @@ train_dataset:
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
   mode: train
-  transforms: ContrastAugmentationTransform
+  transforms: 
+    - type: ContrastAugmentationTransform
   num_classes: 2
 
 val_dataset:
   type: Abdomen
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
-  transforms: ContrastAugmentationTransform
+  transforms: 
+    - type: ContrastAugmentationTransform
   num_classes: 2
   mode: val
 
@@ -25,7 +27,8 @@ test_dataset:
   type: Abdomen
   dataset_root: /kaggle/working/data
   result_dir: /kaggle/working/data/results
-  transforms: ContrastAugmentationTransform
+  transforms: 
+    - type: ContrastAugmentationTransform
   num_classes: 2
   mode: val
 
